Rename cover image to fix loading issues

--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
 
   <script>
     /* ===== Config ===== */
-    const COVER_IMAGE = "WhatsApp Image 2026-01-11 at 21.25.38 (3).jpeg";
+    const COVER_IMAGE = "./capa_proposta.jpg";
     const VALIDITY_TEXT = "Proposta emitida em {DATA}. Valores válidos por 30 dias, sujeitos a ajustes em caso de alteração de escopo.";
     const STORAGE_KEY = "proposta_custom_fields";
     const VALUES_KEY = "proposta_field_values";
